Modernize and standardize BuildTests
Change-Id: I23370ff62780e24cc28ddf717361376e1253dc34
Reviewed-on: https://git.eclipse.org/r/c/platform/eclipse.platform.releng/+/190458
Tested-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-by: Alexander Kurtakov <akurtako@redhat.com>